tests/ui/recursion_limit/invalid_digit.stderr
error: `limit` must be a non-negative integer
  --> $DIR/invalid_digit.rs:3:1
   |
LL | #![recursion_limit = "-100"]
   | ^^^^^^^^^^^^^^^^^^^^^------^
   |                      |
   |                      not a valid integer

error: aborting due to 1 previous error

